--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,10 @@
-<h1><%= @student.to_s %></h1>
+<h1><%= @student.first_name %></h1>
+<h1><%= @student.last_name %></h1>
+
+<% if @student.active %>
+  This student is currently active.
+<% else %>
+  This student is currently inactive.
+<% end %>
+
+<%= button_to 'Click HERE to toggle active status', activate_student_path(@student), method: :get %>
